--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <!-- As I read for SMACSS AND RWD VIEWPOINT , initial-scale=1.0 = Intial state when page loaded , "width=device-width to be applicable to any device -->
   <title>HORNS</title>
 
-  <link rel="stylesheet" href="reset.css">
+  <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layouts.css">
   <link rel="stylesheet" href="css/modules.css">
@@ -27,5 +27,6 @@
 
   </footer>
   
+  <script src="js/app.js"></script>
 </body>
 </html>
