--- a/index.html
+++ b/index.html
@@ -14,17 +14,24 @@
 <body>
   
   <header>
-    <h1> Gallary Of Horns  </h1>
+    <h1> The Gallary Of Horns  </h1>
+
+    <select>
+      <option value="default">Filter by Keyword</option>
+    </select>
+
   </header>
 
   <main>
-
-
+    <section id="photo-template">
+      <h2></h2>
+      <img src="" alt="">
+      <p></p>
+    </section>
   </main>
 
   <footer>
-
-
+    &copy; 2019 Code Fellows
   </footer>
   
   <script src="js/app.js"></script>
