--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     &copy; 2019 Code Fellows
   </footer>
   
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
