lab-02 - completed , features and styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">           
    <!-- As I read for SMACSS AND RWD VIEWPOINT , initial-scale=1.0 = Intial state when page loaded , "width=device-width to be applicable to any device -->
   <title>HORNS</title>
@@ -23,7 +26,7 @@
 
   <main>
     <section id="photo-template">
-      <h2></h2>
+      <h2 id="h2style"></h2>
       <img src="" alt="">
       <p></p>
     </section>
