--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   </footer>
   
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.5.3/handlebars.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
