handlebar completed for 1st page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <link rel="stylesheet" href="css/layouts.css">
   <link rel="stylesheet" href="css/modules.css">
 
+
+  <!-- Handlebar template  -->
+  <script id="horn-template" type="text/x-handlebars-template">
+    <div>
+      <h2>{{title}}</h2>
+      <img src="{{image_url}}" alt="">
+      <p>{{description}}</p>
+    </div>
+  </script>
+
 </head>
 <body>
   
@@ -26,9 +36,9 @@
 
   <main>
     <section id="photo-template">
-      <h2 id="h2style"></h2>
+      <!-- <h2 id="h2style"></h2>
       <img src="" alt="">
-      <p></p>
+      <p></p> -->
     </section>
   </main>
 
