populate keywords in dropdown menu

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </div>
   </script>
 
+  <script id="option-template" type="text/x-handlebars-template">
+    <option value="{{keyword}}">{{keyword}}</option>
+  </script>
+
 </head>
 <body>
   
@@ -36,9 +40,9 @@
 
   <main>
     <section id="photo-template">
-      <!-- <h2 id="h2style"></h2>
+      <h2 id="h2style"></h2>
       <img src="" alt="">
-      <p></p> -->
+      <p></p>
     </section>
   </main>
 
