--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">           
-   <!-- As I read for SMACSS AND RWD VIEWPOINT , initial-scale=1.0 = Intial state when page loaded , "width=device-width to be applicable to any device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- As I read for SMACSS AND RWD VIEWPOINT , initial-scale=1.0 = Intial state when page loaded , "width=device-width to be applicable to any device -->
   <title>HORNS</title>
 
   <!-- <link rel="stylesheet" href="css/reset.css"> -->
@@ -28,10 +29,14 @@
   </script>
 
 </head>
+
 <body>
-  
+
   <header>
-    <h1> The Gallary Of Horns  </h1>
+    <h1> The Gallary Of Horns </h1>
+
+    <!-- <button id="page1">Page 1</button>
+    <button id="page2">Page 2</button> -->
 
     <select>
       <option value="default">Filter by Keyword</option>
@@ -49,9 +54,10 @@
   <footer>
     &copy; 2019 Code Fellows
   </footer>
-  
+
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.5.3/handlebars.js"></script>
   <script src="js/app.js"></script>
 </body>
+
 </html>
